aplikasi tes kenaikan jenjang MQ Ngalah

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,12 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:id="@+id/recyclerView"
         android:layout_below="@+id/scrol"
-        tools:listitem="@layout/list_item"/>
+        android:layout_centerInParent="true"
+        tools:listitem="@layout/list_item" />
 
     <ScrollView
         android:id="@+id/scrol"
@@ -33,55 +33,51 @@
                 android:layout_height="114dp"
                 android:src="@drawable/logomq"
                 android:layout_marginTop="50dp"
-                android:layout_marginLeft="220dp">
+                android:layout_marginLeft="250dp">
 
             </ImageView>
-            <ImageView
-                android:layout_width="800dp"
-                android:layout_height="120dp"
-                android:src="@drawable/play1"
-                android:layout_below="@+id/gbr1"
-                android:layout_marginTop="60dp">
 
-            </ImageView>
-            <ImageView
-                android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:src="@drawable/makhroj"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/gbr1"
-                android:layout_marginTop="40dp">
 
-            </ImageView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Belajar Tajwid"
-                android:textColor="#ffffff"
-                android:textSize="11pt"
-                android:textStyle="bold"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="80dp"
-                android:layout_marginLeft="40dp">
+                android:text="TES KENAIKAN JENJANG"
+                android:textColor="#ffffff"
+                android:textSize="9pt"
+                android:textStyle="bold">
 
             </TextView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="METODE NGALAH"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="110dp"
+                android:text="MQ NGALAH"
                 android:textColor="#ffffff"
                 android:textSize="11pt"
-                android:textStyle="bold"
-                android:layout_marginTop="110dp"
-                android:layout_marginLeft="20dp">
+                android:textStyle="bold">
 
             </TextView>
+
             <Button
                 android:id="@+id/profil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="profil"
                 android:layout_below="@id/gbr1"
-                android:layout_marginLeft="70dp">
+                android:layout_marginLeft="30dp">
+
+            </Button>
+            <Button
+                android:id="@+id/formtes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="form tes"
+                android:layout_below="@id/gbr1"
+                android:layout_marginLeft="150dp">
 
             </Button>
             <Button
@@ -90,41 +86,9 @@
                 android:layout_height="wrap_content"
                 android:text="sanad"
                 android:layout_below="@id/gbr1"
-                android:layout_marginLeft="250dp">
+                android:layout_marginLeft="295dp">
 
             </Button>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="play"
-                android:onClick="play"
-                android:layout_below="@id/gbr1"
-                android:layout_marginTop="95dp"
-                android:layout_marginLeft="30dp">
-
-            </Button>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="pause"
-                android:onClick="pause"
-                android:layout_below="@id/gbr1"
-                android:layout_marginTop="95dp"
-                android:layout_centerHorizontal="true">
-
-            </Button>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="stop"
-                android:onClick="stop"
-                android:layout_below="@id/gbr1"
-                android:layout_marginTop="95dp"
-                android:layout_marginLeft="290dp">
-
-            </Button>
-
-
 
 
 
